[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "student-visit-card-fastapi"
version = "1.0.0"
description = "Навчальний FastAPI-застосунок для лабораторної роботи"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
